cless/test-data/error/wrong_hex_floating.c
int main(void) {
    double x = 0x42WrongSuffix;
}
